src_old/objects/ProjectInvoiceLineItem__c.object
<CustomObject>
    <fields>
        <fullName>AccrualAmount__c</fullName>
        <label>Accrual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AdditionalDescription__c</fullName>
        <label>Additional Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmountCalculated__c</fullName>
        <formula>IF(BlankValue(Amount__c,0) = 0, TotalLineItemDetailAmountCalculated__c, Amount__c)</formula>
        <label>Amount Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargeTotalAmount__c</fullName>
        <label>Charge Total Amount</label>
        <summarizedField>ProjectInvoiceLineItemDetail__c.ChargeEntryTypeAmount__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CreditTotalAmount__c</fullName>
        <label>Credit Total Amount</label>
        <summarizedField>ProjectInvoiceLineItemDetail__c.CreditEntryTypeAmount__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoverningProjectInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GoverningProjectInvoice</label>
        <referenceTo>ProjectInvoice__c</referenceTo>
        <relationshipLabel>Project Invoice Line Items (GoverningProjectInvoice)</relationshipLabel>
        <relationshipName>GoverningProjectInvoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GroupedProjectInvoiceLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouped Project Invoice Line Item</label>
        <referenceTo>ProjectInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Project Invoice Line Items</relationshipLabel>
        <relationshipName>Project_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCloned__c</fullName>
        <formula>!ISNULL(ProjectInvoice__r.ClonedFrom__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LawsonAccount2__c</fullName>
        <label>Lawson Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4500</fullName>
                </value>
                <value>
                    <fullName>2530</fullName>
                </value>
                <value>
                    <fullName>4600</fullName>
                </value>
                <value>
                    <fullName>2590</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawsonAccount__c</fullName>
        <label>Deprecated Lawson Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawsonDivision__c</fullName>
        <label>Lawson Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4155</fullName>
                </value>
                <value>
                    <fullName>999</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawsonSubAccount2__c</fullName>
        <label>Lawson Sub Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0000</fullName>
                </value>
                <value>
                    <fullName>7605</fullName>
                </value>
                <value>
                    <fullName>7606</fullName>
                </value>
                <value>
                    <fullName>230</fullName>
                </value>
                <value>
                    <fullName>238</fullName>
                </value>
                <value>
                    <fullName>246</fullName>
                </value>
                <value>
                    <fullName>210</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>450</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawsonSubAccount__c</fullName>
        <label>Deprecated Lawson Sub Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LawsonUnit2__c</fullName>
        <label>Lawson Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>4155</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LawsonUnit__c</fullName>
        <label>Deprecated Lawson Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineItemOrder__c</fullName>
        <label>Line Item Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLineItemDetail__c</fullName>
        <label>Number of Line Item Detail</label>
        <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PaymentTotalAmount__c</fullName>
        <label>Payment Total Amount</label>
        <summarizedField>ProjectInvoiceLineItemDetail__c.PaymentEntryTypeAmount__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Project Invoice Line Items</relationshipLabel>
        <relationshipName>Project_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectInvoice__c</fullName>
        <label>Project Invoice</label>
        <referenceTo>ProjectInvoice__c</referenceTo>
        <relationshipLabel>Project Invoice Line Items</relationshipLabel>
        <relationshipName>Project_Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuantityOverride__c</fullName>
        <label>Quantity Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>BlankValue(QuantityOverride__c, NumberofLineItemDetail__c )</formula>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RateCalculated__c</fullName>
        <formula>if(BLANKVALUE(Rate__c,0) = 0, AmountCalculated__c, Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Calculated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>SalesTax</fullName>
                </value>
                <value>
                    <fullName>Unreconciled</fullName>
                </value>
                <value>
                    <fullName>PB Applied</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Lawson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalAccrualAmount__c</fullName>
        <formula>NumberofLineItemDetail__c *  AccrualAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Accrual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLineItemAmount__c</fullName>
        <formula>IF(
	ISPICKVAL(Status__c , &apos;Canceled&apos;),
	0.00, 
	IF(Amount__c = 0, ChargeTotalAmount__c, AmountCalculated__c)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Item Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalLineItemBalance__c</fullName>
        <formula>IF( 
	(ISPICKVAL(Status__c , &apos;Canceled&apos;)) , 
	0.00, 
	AmountCalculated__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Item Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalLineItemDetailAmountCalculated__c</fullName>
        <label>Total Line Item Detail Amount Calculated</label>
        <summarizedField>ProjectInvoiceLineItemDetail__c.RateCalculated__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalLineItemDetailAmount__c</fullName>
        <description>Deprecated</description>
        <label>Deprecated Total Line Item Detail Amount</label>
        <summarizedField>ProjectInvoiceLineItemDetail__c.Rate__c</summarizedField>
        <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Usage</fullName>
                </value>
                <value>
                    <fullName>Lumpsum</fullName>
                </value>
                <value>
                    <fullName>Unreconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project Invoice Line Item</label>
    <nameField>
        <displayFormat>INVLI-{000000000}</displayFormat>
        <label>Project Invoice Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>